@@ -5,14 +5,27 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 # http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-__all__ = ['schema', 'protocol', 'io', 'ipc', 'genericio', 'genericipc',
-           'reflectio', 'reflectipc', 'datafile']
+import unittest
+
+# need to do this here since "import *" in only allowed at module level
+from avro import *
+
+_PUBLIC_MODULES = ['schema', 'protocol', 'io', 'ipc', 'genericio', 'genericipc',
+                   'reflectio', 'reflectipc', 'datafile']
+
+class Test(unittest.TestCase):
+  def testimport_star(self):
+    found_modules = []
+    for module_ in _PUBLIC_MODULES:
+      if module_ in globals():
+        found_modules.append(module_)
+    self.assertEqual(_PUBLIC_MODULES, found_modules)
