@@ -82,6 +82,9 @@ Trunk (unreleased changes)
     AVRO-216. Formatting cleanups to schema.py.
     (Jeff Hammerbacher via cutting)
 
+    AVRO-202. Add __all__ listing to Python module, to ease import.
+    (Jeff Hammerbacher via cutting)
+
   OPTIMIZATIONS
 
     AVRO-172. More efficient schema processing (massie)
